--- a/dotcom-rendering/package.json
+++ b/dotcom-rendering/package.json
@@ -49,6 +49,7 @@
 		"@guardian/identity-auth-frontend": "4.0.0",
 		"@guardian/libs": "19.2.1",
 		"@guardian/ophan-tracker-js": "2.2.5",
+		"@guardian/react-crossword": "2.0.2",
 		"@guardian/shimport": "1.0.2",
 		"@guardian/source": "8.0.0",
 		"@guardian/source-development-kitchen": "12.0.0",
