Temp disable AMP validation check

--- a/dotcom-rendering/makefile
+++ b/dotcom-rendering/makefile
@@ -82,9 +82,12 @@ playwright-open: clear clean-dist install build
 	$(call log, "starting DEV server and opening Playwright UI")
 	@pnpm playwright:open
 
-ampValidation: clean-dist install
-	$(call log, "starting AMP Validation test")
-	@node scripts/test/amp-validation.js
+# AMP validation has been temporarly turned off whilst we trial removing AMP pages.
+# If AMP is permanently removed, this check should be deleted.
+
+# ampValidation: clean-dist install
+# 	$(call log, "starting AMP Validation test")
+# 	@node scripts/test/amp-validation.js
 
 buildCheck:
 	$(call log, "checking build files")
