--- a/apps-rendering/package.json
+++ b/apps-rendering/package.json
@@ -41,10 +41,10 @@
 		"@emotion/jest": "11.11.0",
 		"@emotion/react": "11.11.3",
 		"@emotion/server": "11.11.0",
-		"@guardian/apps-rendering-api-models": "10.0.0",
+		"@guardian/apps-rendering-api-models": "11.0.0-PREVIEW.update-content-api-models.2025-01-08T1653.6e4f988c",
 		"@guardian/bridget": "7.0.0",
 		"@guardian/cdk": "50.13.0",
-		"@guardian/content-api-models": "25.0.0",
+		"@guardian/content-api-models": "26.0.0",
 		"@guardian/content-atom-model": "4.0.1",
 		"@guardian/eslint-config": "7.0.1",
 		"@guardian/eslint-config-typescript": "9.0.1",
