Alias React to preact via package.json
https://preactjs.com/guide/v10/getting-started#aliasing-in-node

--- a/dotcom-rendering/package.json
+++ b/dotcom-rendering/package.json
@@ -161,8 +161,8 @@
 		"postcss-styled-syntax": "0.6.3",
 		"preact": "10.15.1",
 		"preact-render-to-string": "6.0.2",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
+		"react": "npm:@preact/compat",
+		"react-dom": "npm:@preact/compat",
 		"react-google-recaptcha": "3.1.0",
 		"rehype-autolink-headings": "7.1.0",
 		"rehype-slug": "6.0.0",
