--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   deno:
     name: 🦕 Deno health
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
 
