Refactor JSON schema scripts
Adding or changing a schema involved editing several files and
duplicating many lines of code. This change refactors the handling code
so that modifying the list of schemas should now mean a single, small
change to the `schemas` array in `schema.mjs`. The functionality should
be the same, with the exception that `make gen-schemas` no longer
automatically `git add`s any changes.

Also made some other small improvements at the same time:
- Converted these scripts to ES modules
- Renamed "schema" to "schemas" in several places, as there are several
- Updated the file and directory names to camelCase
- Added JSDoc comments to explain the code
- Added JSDoc-based types and type-checking for IDEs

--- a/.github/workflows/schema-check.yml
+++ b/.github/workflows/schema-check.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Set up Node environment
         uses: ./.github/actions/setup-node-env
 
-      - name: Run check-schema script
-        run: make check-schema
+      - name: Run check-schemas script
+        run: make check-schemas
         working-directory: dotcom-rendering
