--- a/dotcom-rendering/scripts/deploy/riff-raff.yaml
+++ b/dotcom-rendering/scripts/deploy/riff-raff.yaml
@@ -76,6 +76,8 @@ deployments:
       cloudFormationStackByTags: false
       cloudFormationStackName: tag-page-rendering
       amiParameter: AMITagpagerendering
+      templateParameters:
+        tagpagerenderingPrivateSubnets: /account/vpc/primary/subnets/private
   # tag-page-rendering autoscaling
   tag-page-rendering:
     type: autoscaling
