Run Chromatic for Dependabot PRs if `run_chromatic` label is present

--- a/.github/workflows/dcr-chromatic.yml
+++ b/.github/workflows/dcr-chromatic.yml
@@ -11,12 +11,8 @@ jobs:
     name: Chromatic
     runs-on: ubuntu-latest
     # Run Chromatic only if `run_chromatic` label has been applied or we're
-    # pushing to `main`. Skip if this is a Dependabot PR as this is handled
-    # by the subsequent job.
-    if: |
-      (contains(github.event.pull_request.labels.*.name, 'run_chromatic')  ||  github.ref == 'refs/heads/main') &&
-      (!contains(github.event.pull_request.labels.*.name, 'dependencies') &&
-      github.event.pull_request.user.login != 'dependabot')
+    # pushing to `main`.
+    if: contains(github.event.pull_request.labels.*.name, 'run_chromatic')  ||  github.ref == 'refs/heads/main'
     steps:
       - name: Checkout - On Pull Request
         uses: actions/checkout@v4
