--- a/dotcom-rendering/package.json
+++ b/dotcom-rendering/package.json
@@ -57,6 +57,7 @@
 		"@playwright/test": "1.45.3",
 		"@rspack/cli": "1.0.3",
 		"@rspack/core": "1.0.3",
+		"@rspack/dev-server": "1.0.3",
 		"@sentry/browser": "7.75.1",
 		"@sentry/integrations": "7.75.1",
 		"@storybook/addon-essentials": "8.2.9",
