Hash alt text to make image  unique

--- a/dotcom-rendering/package.json
+++ b/dotcom-rendering/package.json
@@ -82,6 +82,7 @@
 		"@types/clean-css": "4.2.11",
 		"@types/compression": "1.7.5",
 		"@types/connect": "3.4.38",
+		"@types/crypto-js": "4.2.2",
 		"@types/dompurify": "3.0.2",
 		"@types/express": "4.17.21",
 		"@types/he": "1.2.0",
@@ -126,6 +127,7 @@
 		"compression": "1.7.4",
 		"constructs": "10.4.2",
 		"cpy": "11.0.0",
+		"crypto-js": "4.2.0",
 		"css-loader": "7.1.2",
 		"curlyquotes": "1.5.5",
 		"dompurify": "3.2.4",
