--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -50,6 +50,7 @@ jobs:
         working-directory: ./dotcom-rendering
         env:
           NODE_ENV: production
+          IDAPI_CLIENT_ACCESS_TOKEN: ${{ secrets.IDAPI_CLIENT_ACCESS_TOKEN }}
 
       - uses: actions/upload-artifact@v4
         if: always()
