--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,6 +26,11 @@ jobs:
       - name: Set up Node environment
         uses: ./.github/actions/setup-node-env
 
+      - name: Echo environment variables
+        run: |
+          echo "NODE_ENV: $NODE_ENV"
+          echo "CI: $CI"
+
       - name: Set up nginx secure server
         run: |
           sudo apt-get update -y
