--- a/dotcom-rendering/package.json
+++ b/dotcom-rendering/package.json
@@ -31,7 +31,7 @@
 		"@guardian/bridget": "8.1.0",
 		"@guardian/browserslist-config": "6.1.0",
 		"@guardian/cdk": "61.4.0",
-		"@guardian/commercial": "0.0.0-beta-20250514084641",
+		"@guardian/commercial": "26.0.0",
 		"@guardian/core-web-vitals": "7.0.0",
 		"@guardian/eslint-config": "7.0.1",
 		"@guardian/eslint-config-typescript": "9.0.1",
