--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -23,6 +23,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Get runner geolocation
+        run: |
+          curl https://ipinfo.io
+
       - name: Set up Node environment
         uses: ./.github/actions/setup-node-env
 
