delete unused files, update README

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,10 @@ k6-v*arm64
 test-results/
 playwright-report/
 playwright/.cache/
+
+# svelte output
+.svelte-kit
+
+# vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
