--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,64 +26,49 @@ jobs:
       - name: Set up Node environment
         uses: ./.github/actions/setup-node-env
 
-      - name: Echo environment variables
-        run: |
-          echo "NODE_ENV: $NODE_ENV"
-          echo "CI: $CI"
-
       - name: Set up nginx secure server
         run: |
+          # Turn off mandb updates to speed up setup
+          sudo mv /usr/bin/mandb /usr/bin/mandb-OFF
+          sudo cp -p /bin/true /usr/bin/mandb
+          # Update dependencies
           sudo apt-get update -y
+          # Install libnss3-tools
           sudo apt-get install -y libnss3-tools
-          sudo service nginx restart
+          # Install mkcert
           wget -q https://github.com/FiloSottile/mkcert/releases/download/v1.4.3/mkcert-v1.4.3-linux-amd64
-          wget -q https://github.com/guardian/dev-nginx/releases/latest/download/dev-nginx.tar.gz
           sudo cp mkcert-v1.4.3-linux-amd64 /usr/local/bin/mkcert
           sudo chmod +x /usr/local/bin/mkcert
+          # Install dev-nginx
+          wget -q https://github.com/guardian/dev-nginx/releases/latest/download/dev-nginx.tar.gz
           sudo mkdir -p /usr/local/bin/dev-nginx
           sudo tar -xzf dev-nginx.tar.gz -C /usr/local
           sudo chmod +x /usr/local/bin/dev-nginx
+          # Create https://r.thegulocal.com
           sudo ./dotcom-rendering/scripts/nginx/setup-ci.sh
+          # Move the dotcom-rendering nginx config to the right place for GitHub runners and restart nginx
           sudo cp /etc/nginx/servers/dotcom-rendering.conf /etc/nginx/conf.d/dotcom-rendering.conf
           sudo dev-nginx restart-nginx
 
-      - name: Print nginx config location
-        run: |
-          nginx -V 2>&1 | grep "configure arguments:" | sed 's/[^*]*conf-path=\([^ ]*\)\/nginx\.conf.*/\1/g'
-
-      - name: Print nginx config files
-        run: |
-          ls -al /etc/nginx
-          ls -al /etc/nginx/servers
-
-      - name: Print thegulocal nginx config file
-        run: |
-          cat /etc/nginx/servers/dotcom-rendering.conf
-
-      - name: Print nginx config
-        run: |
-          echo "NGINX Config:"
-          sudo nginx -T
-
-      - name: Check URL with curl
+      - name: Check local server
         run: |
           STATUS=$(curl -o /dev/null -s -w "%{http_code}" -k http://localhost:9000)
           echo "HTTP Status: $STATUS"
           if [ "$STATUS" -eq 200 ]; then
-            echo "URL is reachable with status 200"
+            echo "Local server is reachable with status 200"
           else
-            echo "URL is not reachable. Status: $STATUS"
+            echo "Local server is not reachable. Status: $STATUS"
             exit 1
           fi
 
-      - name: Check secure URL with curl
+      - name: Check secure server
         run: |
           STATUS=$(curl -o /dev/null -s -w "%{http_code}" -k https://r.thegulocal.com)
           echo "HTTPS Status: $STATUS"
           if [ "$STATUS" -eq 200 ]; then
-            echo "URL is reachable with status 200"
+            echo "Secure server is reachable with status 200"
           else
-            echo "URL is not reachable. Status: $STATUS"
+            echo "Secure server is not reachable. Status: $STATUS"
             exit 1
           fi
 
