Husky v9 migration changes
- `husky install` is now `husky` in the `npm` `prepare` script.
- The `husky.sh` script is deprecated, and should be removed from the
git hook files.

Co-authored-by: Marjan Kalanaki <marjan.kalanaki@guardian.co.uk>

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"build-storybook:dcr": "pnpm --filter @guardian/dotcom-rendering build-storybook",
 		"build:dcr": "cd dotcom-rendering && make build",
 		"chromatic": "chromatic --build-script-name=build-storybook --exit-zero-on-changes",
-		"prepare": "husky install",
+		"prepare": "husky",
 		"lint-staged": "lint-staged",
 		"prettier:check": "prettier --ignore-unknown --check --cache .",
 		"prettier:write": "prettier --ignore-unknown --write --cache ."
