--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # keep aligned with the number of shards used by `playwright test`
+        # keep aligned with --shard parameter below
         group: [1, 2, 3, 4, 5, 6, 7, 8]
     services:
       DCR:
@@ -31,7 +31,7 @@ jobs:
         working-directory: ./dotcom-rendering
 
       - name: Run Playwright
-        run: pnpm playwright test --shard=${{ matrix.group }}/8
+        run: pnpm playwright test e2e.spec.ts --shard=${{ matrix.group }}/8
         working-directory: ./dotcom-rendering
         env:
           NODE_ENV: production
