--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,12 +26,20 @@ jobs:
     with:
       container-image: ${{ needs.container.outputs.container-image }}
 
+  playwright-secure:
+    needs: [container]
+    uses: ./.github/workflows/playwright-secure.yml
+    with:
+      container-image: ${{ needs.container.outputs.container-image }}
+    secrets:
+      IDAPI_CLIENT_ACCESS_TOKEN: ${{ secrets.IDAPI_CLIENT_ACCESS_TOKEN }}
+
   publish:
     permissions:
       id-token: write
       contents: read
       pull-requests: write # required by riff-raff action
-    needs: [container, prettier, jest, lint, playwright]
+    needs: [container, prettier, jest, lint, playwright, playwright-secure]
     uses: ./.github/workflows/publish.yml
     with:
       container-image: ${{ needs.container.outputs.container-image }}
