--- a/.github/workflows/ab-testing.yml
+++ b/.github/workflows/ab-testing.yml
@@ -34,6 +34,8 @@ jobs:
   build-ui:
     name: AB testing UI build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     defaults:
       run:
         working-directory: ab-testing/frontend
@@ -44,7 +46,8 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v2.3
-
+      - name: Install
+        run: deno install
       - name: Build
         run: deno run build
 
