--- a/.github/workflows/playwright-secure.yml
+++ b/.github/workflows/playwright-secure.yml
@@ -9,6 +9,9 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: read
+
 jobs:
   playwright-secure:
     runs-on: ubuntu-latest
