--- a/.github/workflows/ab-testing.yml
+++ b/.github/workflows/ab-testing.yml
@@ -8,6 +8,8 @@ jobs:
   deno:
     name: 🦕 AB testing
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     defaults:
       run:
         working-directory: ab-testing/scripts
