--- a/dotcom-rendering/package.json
+++ b/dotcom-rendering/package.json
@@ -32,17 +32,17 @@
 		"@guardian/browserslist-config": "6.1.0",
 		"@guardian/cdk": "61.4.0",
 		"@guardian/commercial": "26.1.2",
-		"@guardian/core-web-vitals": "0.0.0-canary-20250708135721",
+		"@guardian/core-web-vitals": "7.0.0",
 		"@guardian/eslint-config": "7.0.1",
 		"@guardian/eslint-config-typescript": "9.0.1",
-		"@guardian/identity-auth": "0.0.0-canary-20250708135721",
-		"@guardian/identity-auth-frontend": "0.0.0-canary-20250708135721",
+		"@guardian/identity-auth": "6.0.1",
+		"@guardian/identity-auth-frontend": "8.1.0",
 		"@guardian/libs": "0.0.0-canary-20250708135721",
 		"@guardian/ophan-tracker-js": "2.2.10",
-		"@guardian/react-crossword": "0.0.0-canary-20250708135721",
+		"@guardian/react-crossword": "6.3.0",
 		"@guardian/shimport": "1.0.2",
 		"@guardian/source": "9.0.0",
-		"@guardian/source-development-kitchen": "0.0.0-canary-20250708135721",
+		"@guardian/source-development-kitchen": "18.1.1",
 		"@guardian/support-dotcom-components": "7.4.0",
 		"@guardian/tsconfig": "0.2.0",
 		"@playwright/test": "1.52.0",
