--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,11 +55,11 @@ jobs:
 
       # All rendering apps deployment
       - name: Upload rendering apps to RiffRaff
-        uses: guardian/actions-riff-raff@v4.1.2
+        uses: guardian/actions-riff-raff@v4.2.0
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           roleArn: ${{ secrets.GU_RIFF_RAFF_ROLE_ARN }}
-          projectName: dotcom:rendering-all
+          projectName: does-not-exist
           configPath: riff-raff.yaml
           contentDirectories: |
             article-rendering-cfn:
